Bug 430650 '^' and 'N' chars don't work in password fields r=roc+katakai, sr=roc, a=beltzner